EPOS/Microsoft Visual Basic/Example VB 2010 64-Bit/Definitions.vb


'Compatibility Functions (do not use)
Declare Function VCS_SetMotorParameter Lib "EposCmd64.dll" Alias "VCS_SetMotorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal MotorType As UShort, ByVal ContinuousCurrent As UShort, ByVal PeakCurrent As UShort, ByVal PolePair As Byte, ByVal ThermalTimeConstant As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetMotorParameter Lib "EposCmd64.dll" Alias "VCS_GetMotorParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pMotorType As UShort, ByRef pContinuousCurrent As UShort, ByRef pPeakCurrent As UShort, ByRef pPolePair As Byte, ByRef pThermalTimeConstant As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetEncoderParameter Lib "EposCmd64.dll" Alias "VCS_SetEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Counts As UShort, ByVal PositionSensorType As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetEncoderParameter Lib "EposCmd64.dll" Alias "VCS_GetEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCounts As UShort, ByRef pPositionSensorType As UShort, ByRef pErrorCode As UInteger) As Integer

Declare Function VCS_SetPositionRegulatorGain Lib "EposCmd64.dll" Alias "VCS_SetPositionRegulatorGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal P As UShort, ByVal I As UShort, ByVal D As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetPositionRegulatorFeedForward Lib "EposCmd64.dll" Alias "VCS_SetPositionRegulatorFeedForward" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal VelocityFeedForward As UShort, ByVal AccelerationFeedForward As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionRegulatorGain Lib "EposCmd64.dll" Alias "VCS_GetPositionRegulatorGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pP As UShort, ByRef pI As UShort, ByRef pD As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionRegulatorFeedForward Lib "EposCmd64.dll" Alias "VCS_GetPositionRegulatorFeedForward" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVelocityFeedForward As UShort, ByRef pAccelerationFeedForward As UShort, ByRef pErrorCode As UInteger) As Integer

Declare Function VCS_SetVelocityRegulatorGain Lib "EposCmd64.dll" Alias "VCS_SetVelocityRegulatorGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal P As UShort, ByVal I As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetVelocityRegulatorFeedForward Lib "EposCmd64.dll" Alias "VCS_SetVelocityRegulatorFeedForward" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal VelocityFeedForward As UShort, ByVal AccelerationFeedForward As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityRegulatorGain Lib "EposCmd64.dll" Alias "VCS_GetVelocityRegulatorGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pP As UShort, ByRef pI As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityRegulatorFeedForward Lib "EposCmd64.dll" Alias "VCS_GetVelocityRegulatorFeedForward" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVelocityFeedForward As UShort, ByRef pAccelerationFeedForward As UShort, ByRef pErrorCode As UInteger) As Integer

Declare Function VCS_SetCurrentRegulatorGain Lib "EposCmd64.dll" Alias "VCS_SetCurrentRegulatorGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal P As UShort, ByVal I As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentRegulatorGain Lib "EposCmd64.dll" Alias "VCS_GetCurrentRegulatorGain" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pP As UShort, ByRef pI As UShort, ByRef pErrorCode As UInteger) As Integer

'*************************************************************************************************************************************
' OPERATION FUNCTIONS
'************************************************************************************************************************************/

'OperationMode
Declare Function VCS_SetOperationMode Lib "EposCmd64.dll" Alias "VCS_SetOperationMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Mode As SByte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetOperationMode Lib "EposCmd64.dll" Alias "VCS_GetOperationMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pMode As SByte, ByRef pErrorCode As UInteger) As Integer

'StateMachine
Declare Function VCS_ResetDevice Lib "EposCmd64.dll" Alias "VCS_ResetDevice" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetState Lib "EposCmd64.dll" Alias "VCS_SetState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal State As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetEnableState Lib "EposCmd64.dll" Alias "VCS_SetEnableState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetDisableState Lib "EposCmd64.dll" Alias "VCS_SetDisableState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetQuickStopState Lib "EposCmd64.dll" Alias "VCS_SetQuickStopState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ClearFault Lib "EposCmd64.dll" Alias "VCS_ClearFault" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetState Lib "EposCmd64.dll" Alias "VCS_GetState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pState As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetEnableState Lib "EposCmd64.dll" Alias "VCS_GetEnableState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pIsEnabled As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetDisableState Lib "EposCmd64.dll" Alias "VCS_GetDisableState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pIsDisabled As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetQuickStopState Lib "EposCmd64.dll" Alias "VCS_GetQuickStopState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pIsQuickStopped As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetFaultState Lib "EposCmd64.dll" Alias "VCS_GetFaultState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pIsInFault As Integer, ByRef pErrorCode As UInteger) As Integer

'ErrorHandling
Declare Function VCS_GetNbOfDeviceError Lib "EposCmd64.dll" Alias "VCS_GetNbOfDeviceError" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pNbDeviceError As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetDeviceErrorCode Lib "EposCmd64.dll" Alias "VCS_GetDeviceErrorCode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DeviceErrorNumber As Byte, ByRef pDeviceErrorCode As UInteger, ByRef pErrorCode As UInteger) As Integer

'Motion Info
Declare Function VCS_GetMovementState Lib "EposCmd64.dll" Alias "VCS_GetMovementState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pTargetReached As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionIs Lib "EposCmd64.dll" Alias "VCS_GetPositionIs" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pPositionIs As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityIs Lib "EposCmd64.dll" Alias "VCS_GetVelocityIs" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVelocityIs As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetVelocityIsAveraged Lib "EposCmd64.dll" Alias "VCS_GetVelocityIsAveraged" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVelocityIsAveraged As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentIs Lib "EposCmd64.dll" Alias "VCS_GetCurrentIs" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCurrentIs As Short, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentIsEx Lib "EposCmd64.dll" Alias "VCS_GetCurrentIsEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCurrentIs As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentIsAveraged Lib "EposCmd64.dll" Alias "VCS_GetCurrentIsAveraged" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCurrentIsAveraged As Short, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetCurrentIsAveragedEx Lib "EposCmd64.dll" Alias "VCS_GetCurrentIsAveragedEx" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCurrentIsAveraged As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_WaitForTargetReached Lib "EposCmd64.dll" Alias "VCS_WaitForTargetReached" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Timeout As UInteger, ByRef pErrorCode As UInteger) As Integer

'Profile Position Mode
Declare Function VCS_ActivateProfilePositionMode Lib "EposCmd64.dll" Alias "VCS_ActivateProfilePositionMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetPositionProfile Lib "EposCmd64.dll" Alias "VCS_SetPositionProfile" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ProfileVelocity As UInteger, ByVal ProfileAcceleration As UInteger, ByVal ProfileDeceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionProfile Lib "EposCmd64.dll" Alias "VCS_GetPositionProfile" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pProfileVelocity As UInteger, ByRef pProfileAcceleration As UInteger, ByRef pProfileDeceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_MoveToPosition Lib "EposCmd64.dll" Alias "VCS_MoveToPosition" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal TargetPosition As Integer, ByVal Absolute As Integer, ByVal Immediately As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetTargetPosition Lib "EposCmd64.dll" Alias "VCS_GetTargetPosition" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pTargetPosition As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_HaltPositionMovement Lib "EposCmd64.dll" Alias "VCS_HaltPositionMovement" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'Advanced Functions
Declare Function VCS_EnablePositionWindow Lib "EposCmd64.dll" Alias "VCS_EnablePositionWindow" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal PositionWindow As UInteger, ByVal PositionWindowTime As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisablePositionWindow Lib "EposCmd64.dll" Alias "VCS_DisablePositionWindow" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
